app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: tests
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: "larryso/sample-hello-app:2.0"
